c2prj1_cards/grade.txt
Grading at Fri Jun 12 15:11:08 UTC 2020
Compiling cards.c
cards.c: In function ‘card_from_letters’:
cards.c:82:42: error: expected ‘;’ before ‘:’ token
    default  : temp.suit = NUM_SUITS;break:;} 
                                          ^
Could not compile your card.c!

Overall Grade: FAILED
